--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,6 +147,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    implementation 'com.hbb20:ccp:2.7.3'
 }
 
 ext {
