--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -170,6 +170,7 @@
         <activity android:name="org.commcare.activities.connect.ConnectIdPhoneVerificationActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdMessageActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectActivity"/>
+        <activity android:name="org.commcare.activities.connect.ConnectUpgradeActivity"/>
 
         <activity android:name="org.commcare.activities.AppSelectActivity"/>
 
