--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,6 @@ android.useAndroidX=true
 
 # automatically migrates existing third-party libraries to use AndroidX by rewriting their binaries
 android.enableJetifier=true
+
+# generate R classes with final fields
+android.nonFinalResIds=false
