--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -104,7 +104,7 @@
 -dontnote okhttp3.**
 
 #Retrofit Stuff
--keep class retrofit2.** { *; }
+-keep class retrofit2.Call { *; }
 -dontnote retrofit2.Platform
 -dontwarn retrofit2.Platform$Java8
 -keepattributes Signature
