No more password-only option at registration. Forcing user to configure a screen unlock during registration/recovery. User defines and later confirms a 6-digit recovery PIN during registration. User prompted for PIN during recovery (password option still available for existing users). Upon successful recovery, password-only users are converted to use recovery PIN. Upgraded Connect user DB model to include PIN and whether secondary phone has been verified. Moved ConnectID workflow management into new ConnectIdWorkflows class. Improved mechanism for marking ConnectNetworkHelper as busy to better identify what call is in progress when busy.

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -169,8 +169,8 @@
         <activity android:name="org.commcare.activities.connect.ConnectIdPicturesActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdPhoneVerificationActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdMessageActivity"/>
+        <activity android:name="org.commcare.activities.connect.ConnectIdPinActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectActivity"/>
-
         <activity android:name="org.commcare.activities.AppSelectActivity"/>
 
         <provider
