--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -171,6 +171,7 @@
         <activity android:name="org.commcare.activities.connect.ConnectIdMessageActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdPinActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectActivity"/>
+        <activity android:name="org.commcare.activities.connect.ConnectJobInfoActivity"/>
         <activity android:name="org.commcare.activities.AppSelectActivity"/>
 
         <provider
