Revert "Merge branch 'master' of https://github.com/dimagi/commcare-android into dv/nav_fixes"
This reverts commit 65b93bc3d2a13bdbe1db722007a8caa26b597303, reversing
changes made to 1b70c3eb86b452442bf8906f79c06ff2ca164b28.

--- a/app/jacoco.gradle
+++ b/app/jacoco.gradle
@@ -13,8 +13,8 @@ android {
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testCommcareDebugUnitTest']) {
     reports {
-        xml.required = true
-        html.required = true
+        xml.enabled = true
+        html.enabled = true
     }
     def fileFilter = ['**/R.class',
                       '**/R$*.class',
