Upgrade AGP to v8.0.1 to match master

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -53,6 +53,8 @@
 -dontwarn sun.misc.Unsafe
 
 -dontwarn org.xmlpull.v1.**
+-dontwarn org.kxml2.io.**
+-dontwarn android.content.res.**
 -dontwarn javax.annotation.**,javax.microedition.**
 -dontwarn org.apache.**
 -dontwarn org.joda.**
@@ -102,6 +104,7 @@
 -dontnote okhttp3.**
 
 #Retrofit Stuff
+-keep class retrofit2.Call { *; }
 -dontnote retrofit2.Platform
 -dontwarn retrofit2.Platform$Java8
 -keepattributes Signature
