--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.jacoco:org.jacoco.core:0.8.10'
         classpath 'com.vanniktech:gradle-maven-publish-plugin:0.15.1'
+
+        def nav_version = "2.6.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
