Fixing some broken tests (aligning with master)
Also changed app version to match master.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -470,7 +470,7 @@ android {
 
             multiDexKeepProguard file('proguard-multidex.pro')
             // enable crashlytics
-            buildConfigField 'boolean', 'USE_CRASHLYTICS', "true"
+            buildConfigField 'boolean', 'USE_CRASHLYTICS', 'true'
             ext.enableCrashlytics = true
         }
     }
