- mobile sms verification

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -121,6 +121,13 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/fcm_default_notification_channel" />
 
+        <receiver android:name="org.commcare.connect.MySMSBroadcastReceiver" android:exported="true"
+            android:permission="com.google.android.gms.auth.api.phone.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.gms.auth.api.phone.SMS_RETRIEVED"/>
+            </intent-filter>
+        </receiver>
+
         <activity
             android:label="@string/application_name"
             android:exported="true"
