Push notification redirection
Working on push notification redirection for new opportunity assign

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,5 @@ android.enableJetifier=true
 
 # generate R classes with final fields
 android.nonFinalResIds=false
+GOOGLE_SERVICES_API_KEY=AIzaSyCpI4eCdeIys7oITik-nIyUSI4JYvtDvlE
+FIREBASE_DATABASE_URL=https://commcare-a57e4.firebaseio.com
