--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -170,7 +170,11 @@
         <activity android:name="org.commcare.activities.connect.ConnectIdPhoneVerificationActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdMessageActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdPinActivity"/>
-        <activity android:name="org.commcare.activities.connect.ConnectActivity"/>
+        <activity android:name="org.commcare.activities.connect.ConnectActivity" android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name="org.commcare.activities.AppSelectActivity"/>
 
         <provider
