--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.commcare.dalvik"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:versionCode="106"
-          android:versionName="2.55">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:versionCode="106"
+    android:versionName="2.55">
 
     <uses-permission android:name="android.permission.NFC"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
+
     <uses-permission
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:name="android.permission.READ_PHONE_STATE"/>
@@ -126,6 +128,14 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/fcm_default_notification_channel" />
 
+        <receiver android:name="org.commcare.connect.SMSBroadcastReceiver"
+            android:exported="true"
+            android:permission="com.google.android.gms.auth.api.phone.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.gms.auth.api.phone.SMS_RETRIEVED"/>
+            </intent-filter>
+        </receiver>
+
         <activity
             android:label="@string/application_name"
             android:exported="true"
@@ -164,17 +174,16 @@
         <activity android:name="org.commcare.activities.MenuActivity"/>
 
         <activity android:name="org.commcare.activities.connect.ConnectIdRecoveryDecisionActivity"/>
-        <activity android:name="org.commcare.activities.connect.ConnectIdLoginActivity"/>
+        <activity android:name="org.commcare.activities.connect.ConnectIdBiometricUnlockActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdConsentActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdPhoneActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdRegistrationActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdPasswordActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdPasswordVerificationActivity"/>
-        <activity android:name="org.commcare.activities.connect.ConnectIdVerificationActivity"/>
-        <activity android:name="org.commcare.activities.connect.ConnectIdPicturesActivity"/>
+        <activity android:name="org.commcare.activities.connect.ConnectIdBiometricConfigActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdPhoneVerificationActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdMessageActivity"/>
-
+        <activity android:name="org.commcare.activities.connect.ConnectIdPinActivity"/>
         <activity android:name="org.commcare.activities.AppSelectActivity"/>
 
         <provider
