--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,10 @@ dependencies {
 
     implementation('io.ona.kujaku:library:0.9.0') {
         exclude module: 'xpp3'
+        exclude module: 'volley'
+        exclude module: 'storage'
+        exclude group: 'com.mapbox.mapboxsdk', module: 'mapbox-android-accounts'
+        exclude group: 'io.realm'
     }
     implementation 'androidx.work:work-runtime:2.7.1'
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
