--- a/app/build.gradle
+++ b/app/build.gradle
@@ -295,8 +295,10 @@ android {
         buildConfigField 'String', 'ANALYTICS_TRACKING_ID_DEV', "\"${project.ext.ANALYTICS_TRACKING_ID_DEV}\""
         buildConfigField 'String', 'MAPBOX_SDK_API_KEY', "\"${project.ext.MAPBOX_SDK_API_KEY}\""
 
+        buildConfigField "String", "FIREBASE_DATABASE_URL", "\"${project.ext.FIREBASE_DATABASE_URL}\""
 
         buildConfigField 'String', 'CCC_HOST', "\"connect.dimagi.com\""
+
         testInstrumentationRunner 'org.commcare.CommCareJUnitRunner'
     }
 
