Added lastAccessed field to ConnectLinkedAppRecord. Some fixes for ConnectID after Navigation refactor. Cleaned up some Connect database upgrade code.

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -170,8 +170,11 @@
         <activity android:name="org.commcare.activities.MenuActivity" />
 
         <activity
+            android:name="org.commcare.activities.connect.ConnectIdActivity"
+            android:exported="true" />
+        <activity
             android:name="org.commcare.activities.connect.ConnectActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity android:name="org.commcare.activities.AppSelectActivity" />
 
         <provider
