--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.jacoco:org.jacoco.core:0.8.10'
         classpath 'com.vanniktech:gradle-maven-publish-plugin:0.15.1'
+        classpath 'com.google.firebase:perf-plugin:1.4.2'
     }
 }
 
