--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -172,6 +172,12 @@
         <activity
             android:name="org.commcare.activities.connect.ConnectActivity"
             android:exported="true"></activity>
+        <activity
+            android:name="org.commcare.activities.connect.ConnectIdActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name="org.commcare.activities.connect.ConnectIdNewActivity"
+            android:exported="true"></activity>
         <activity android:name="org.commcare.activities.AppSelectActivity" />
 
         <provider
