Resolved merge conflicts

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -461,7 +461,7 @@ android {
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard.cfg'
             testProguardFiles 'test-proguard.cfg'
-
+            multiDexKeepProguard file('proguard-multidex.pro')
             // enable crashlytics
             buildConfigField 'boolean', 'USE_CRASHLYTICS', 'true'
             ext.enableCrashlytics = true
