--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="org.commcare.dalvik"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    package="org.commcare.dalvik"
     android:versionCode="106"
     android:versionName="2.55">
 
@@ -130,19 +130,35 @@
             android:exported="true"
             android:permission="com.google.android.gms.auth.api.phone.permission.SEND">
             <intent-filter>
-                <action android:name="com.google.android.gms.auth.api.phone.SMS_RETRIEVED"/>
+                <action android:name="com.google.android.gms.auth.api.phone.SMS_RETRIEVED" />
             </intent-filter>
         </receiver>
 
         <activity
-            android:name="org.commcare.activities.DispatchActivity"
-            android:exported="true"
-            android:label="@string/application_name">
+            android:name="org.commcare.activities.connect.HQUserInviteActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="hq_invite"
+                    android:scheme="connect" />
+                <data android:pathPattern="/.*/.*/.*" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="org.commcare.activities.DispatchActivity"
+            android:exported="true"
+            android:label="@string/application_name">
+
             <intent-filter>
                 <action android:name="org.commcare.dalvik.action.CommCareSession" />
 
