--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -174,6 +174,7 @@
             android:exported="true" />
         <activity
             android:name="org.commcare.activities.connect.ConnectActivity"
+            android:theme="@style/NoAppBarTheme"
             android:exported="true" />
         <activity android:name="org.commcare.activities.AppSelectActivity" />
 
