Update API logic
Update API logic

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -137,7 +137,7 @@
         <activity
             android:name="org.commcare.activities.connect.HQUserInviteActivity"
             android:exported="true">
-            <intent-filter>
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
