enable gradle configuration cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,6 @@ android.enableJetifier=true
 
 # generate R classes with final fields
 android.nonFinalResIds=false
+
+# Enables Gradle Configuration Cache to improve build performance
+org.gradle.configuration-cache=true
